--- a/second-action-react/.github/workflows/test-react.yml
+++ b/second-action-react/.github/workflows/test-react.yml
@@ -11,9 +11,10 @@ jobs:
         with:
           node-version: 18
       - name: Install npm Install
+        working-directory: ./second-action-react
         run: npm ci # like npm install
-      - name: Run Tests
-        run: npm test
+      - name: Run React
+        run: npm run dev
 
 
   
