--- a/second-action-react/.github/workflows/test-react.yml
+++ b/second-action-react/.github/workflows/test-react.yml
@@ -6,15 +6,15 @@ jobs:
     steps:
       - name: Download Clone Code
         uses: actions/checkout@v3
-      - name: Install NodeJS on Runner # By default its installed.
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - name: Install npm Install
-        working-directory: ./second-action-react
-        run: npm install # like npm install
-      - name: Run React
-        run: npm run dev
+      # - name: Install NodeJS on Runner # By default its installed.
+      #   uses: actions/setup-node@v3
+      #   with:
+      #     node-version: 18
+      # - name: Install npm Install
+      #   working-directory: ./second-action-react
+      #   run: npm ci # like npm install
+      # - name: Run React
+      #   run: npm run dev
 
 
   
