--- a/.github/workflows/test-react.yml
+++ b/.github/workflows/test-react.yml
@@ -11,7 +11,7 @@ jobs:
         with:
           node-version: 18
       - name: Install npm Install
-        working-directory: .github/workflows
+        # working-directory: .github/workflows
         run: npm install # like npm install
       - name: Run React
         run: npm run dev
