--- a/.github/workflows/test-react.yml
+++ b/.github/workflows/test-react.yml
@@ -13,8 +13,8 @@ jobs:
       - name: Install npm Install
         working-directory: second-action-react
         run: npm install # like npm install
-      - name: Run React
-        run: npm run dev
+      # - name: Run React
+      #   run: npm run dev
 
 
   
