--- a/.github/workflows/cancell-and-skip-workflows.yml
+++ b/.github/workflows/cancell-and-skip-workflows.yml
@@ -8,7 +8,7 @@
 # Only that workflows will not triggers.
 # ex. git commit -m "Skip Workflow for demo [skip ci]"
 
-name: Control Events triggers on specific branches only.
+name: Skip Workflows for demo
 on:
   workflow_dispatch: 
   pull_request: 
