--- a/.github/workflows/.gitignore
+++ b/.github/workflows/.gitignore
@@ -22,3 +22,10 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+Create-Custom-Action_repo
+Docker-Runner-gh-actions-repo
+first-action-file
+gh-action-part2_repo
+second-action-react
+Security-Permissoins_repo
