--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 gh-action-part2_repo
-Docker-container-runner-repo
-Create-Custom-Action_repo
+Docker-container-runner-repo/
+Create-Custom-Action_repo/
+
+Create-Custom-Action_repo/
+Docker-Runner-gh-actions-repo/
+first-action-file/
+gh-action-part2_repo/
+second-action-react/
+Security-Permissoins_repo/
