--- a/.github/workflows/practic1.yml
+++ b/.github/workflows/practic1.yml
@@ -19,4 +19,4 @@ jobs:
           cat /etc/os-release
           ip=$(curl ipconfig.io)
           echo "IP is: $ip"
-          curl $ip:80
+          curl $ip/index.html
