--- a/.github/workflows/practic1.yml
+++ b/.github/workflows/practic1.yml
@@ -4,18 +4,29 @@ jobs:
   first-job:
     runs-on: ubuntu-latest
     steps:
-      - name: update repo
-        run: sudo apt-get update -y
-      - name: install nginx
-        run: sudo apt-get install nginx -y
-      
-  second-job:
+      - name: clone repo
+        uses: actions/checkout@v4
+      - name: install node 18
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+      - name: npm ci
+        run: npm ci
+      - name: npm test
+        run: npm run test
+
+
+  deploy_job:
     needs: first-job
     runs-on: ubuntu-latest
     steps:
-      - name: cat index
-        run: | 
-          cat /var/www/html/index.html
-          cat /etc/os-release
-          ip=$(curl ipconfig.io)
-          echo "IP is: $ip"
+      - name: clone repo
+        uses: actions/checkout@v4
+      - name: install npm
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+      - name: npm install 
+        run: npm ci
+      - name: npm build
+        run: npm run build
