--- a/.github/workflows/practic1.yml
+++ b/.github/workflows/practic1.yml
@@ -6,7 +6,9 @@ on:
       - opened
   workflow_dispatch:
   push:
-    branches:
+    # branches:
+    #   - main
+    branches-ignore: 
       - main
 jobs:
   first-job:
