--- a/.github/workflows/practic1.yml
+++ b/.github/workflows/practic1.yml
@@ -60,5 +60,8 @@ jobs:
       - name: upload artifact
         uses: actions/upload-artifact@v4
         with:
-          path: dist
+          path: |
+            dist
+            second-action-react
           name: my-test-artifact 
+        
