--- a/.github/workflows/practic1.yml
+++ b/.github/workflows/practic1.yml
@@ -97,6 +97,7 @@ jobs:
         uses: actions/checkout@v3
       - name: npm install
         run: npm ci
+        working-directory: second-action-react
       - name: npm test
         run: npm run test
         working-directory: second-action-react
@@ -108,6 +109,7 @@ jobs:
         uses: actions/checkout@v3
       - name: npm install
         run: npm ci
+        working-directory: second-action-react
       - name: build npm
         working-directory: second-action-react
         run: npm run build
