--- a/.github/workflows/practic1.yml
+++ b/.github/workflows/practic1.yml
@@ -152,6 +152,8 @@ jobs:
     needs: upload_artifacts
     runs-on: ubuntu-latest
     steps:
+      - name: checkout repo
+        uses: actions/checkout@v3
       - name: downloaded artifact
         uses: actions/download-artifact@v4
         id: Download
