--- a/.github/workflows/practic1.yml
+++ b/.github/workflows/practic1.yml
@@ -169,5 +169,21 @@ jobs:
       - name: Print output from previous step
         run: |
           echo "Output from output-run step: ${{ steps.output-run.outputs.test-output }}"
+      
+  cache:
+    runs-on: ubuntu-latest
+    steps:
+      - name: use cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: my-cache-${{ hashFiles('**package-lock.json') }}
+      - name: npm ci
+        run: npm ci
 
+      # - name: Cache all npm steps.
+      #   uses: actions/cache@v4
+      #   with:
+      #     path: ~/.npm
+      #     key: retrive-cache-key-${{ hashFiles('**/package-lock.json') }}
     
