--- a/.github/workflows/practic1.yml
+++ b/.github/workflows/practic1.yml
@@ -180,6 +180,7 @@ jobs:
           key: my-cache-${{ hashFiles('**package-lock.json') }}
       - name: npm ci
         run: npm ci
+        working-directory: second-action-react
 
       # - name: Cache all npm steps.
       #   uses: actions/cache@v4
