--- a/.github/workflows/practic1.yml
+++ b/.github/workflows/practic1.yml
@@ -173,6 +173,8 @@ jobs:
   cache:
     runs-on: ubuntu-latest
     steps:
+      - name: clone repo
+        uses: actions/checkout@v3
       - name: use cache
         uses: actions/cache@v3
         with:
